--- a/app/src/main/res/drawable/map_category_shelter_button_clicked.xml
+++ b/app/src/main/res/drawable/map_category_shelter_button_clicked.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#F2FFFFFF" />
-    <corners android:topRightRadius="30dp"
-        android:topLeftRadius="30dp" />
+    <corners android:radius="100dp" />
+    <solid android:color="@color/blue" />
 
 </shape>
