--- a/app/src/main/res/drawable/map_recyclerview_border.xml
+++ b/app/src/main/res/drawable/map_recyclerview_border.xml
@@ -6,10 +6,10 @@
         android:right="-2dp"
         android:top="-2dp">
         <shape android:shape="rectangle">
+            <solid android:color="#00FFFFFF" />
             <stroke
                 android:width="1dp"
                 android:color="@color/gray100" />
-            <solid android:color="@color/white" />
         </shape>
 
     </item>
