--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -38,11 +38,32 @@
         android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="50dp" />
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:animateLayoutChanges="true"/>
+
+    <android.widget.Button
+        android:id="@+id/listViewButton"
+        android:background="@drawable/map_list_view_button"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_gravity="bottom|center"
+        android:paddingHorizontal="25dp"
+        android:text="목록보기"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_marginBottom="30dp"/>
 
     <include
         android:id="@+id/bottomSheetDialog"
