--- a/app/src/main/res/layout/item_aed.xml
+++ b/app/src/main/res/layout/item_aed.xml
@@ -77,6 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/aedInfoText"
@@ -89,7 +90,7 @@
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/aedInfoButton2"
+            app:layout_constraintEnd_toStartOf="@id/findPathLinearLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -112,7 +113,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/aedInfoButton2"
+            android:id="@+id/findPathLinearLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
@@ -123,6 +124,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <android.widget.Button
+                android:id="@+id/recyclerViewFindPathButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/map_aed_button"
