--- a/app/src/main/res/layout/item_aed.xml
+++ b/app/src/main/res/layout/item_aed.xml
@@ -95,11 +95,11 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <android.widget.Button
-                android:id="@+id/bookmark"
+                android:id="@+id/recyclerViewCallButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/map_aed_button"
-                android:drawableStart="@drawable/map_bookmark_off"
+                android:drawableStart="@drawable/map_call_symbol"
                 android:paddingLeft="12dp" />
 
             <TextView
