--- a/app/src/main/res/layout/item_detail_viewpager.xml
+++ b/app/src/main/res/layout/item_detail_viewpager.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/map_top_radius_white_background"
     android:padding="20dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <LinearLayout
-        app:layout_constraintHorizontal_weight="2"
         android:id="@+id/infoText"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/infoButton"
+        app:layout_constraintHorizontal_weight="2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -51,10 +51,10 @@
 
         <TextView
             android:id="@+id/addressMarker"
-            android:layout_marginVertical="5dp"
             android:layout_width="wrap_content"
-            android:maxLines="2"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:maxLines="2"
             android:textColor="@color/black"
             android:textSize="13sp"
             android:textStyle="bold"
@@ -71,73 +71,110 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        app:layout_constraintHorizontal_weight="1"
         android:id="@+id/infoButton"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/infoText"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/infoButton1"
+            android:id="@+id/bookMarkLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/findPathLayout"
+            android:orientation="horizontal"
+            android:gravity="end
+"
+            app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <android.widget.Button
-                android:id="@+id/callNumber"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/map_aed_button"
-                android:drawableStart="@drawable/map_bookmark_off"
-                android:paddingLeft="12dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_weight="1">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="즐겨찾기"
-                android:textSize="10sp" />
+                android:text="즐겨찾기" />
 
+            <android.widget.Button
+                android:id="@+id/bookMarkButton"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginHorizontal="5dp"
+                android:background="@drawable/map_bookmark_off" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/findPathLayout"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/buttonsLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:gravity="center"
-            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/infoButton1"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bookMarkLayout"
+            app:layout_constraintVertical_weight="4">
 
-            <android.widget.Button
-                android:id="@+id/findPathButton"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/map_aed_button"
-                android:drawableLeft="@drawable/map_find_way"
-                android:paddingLeft="12dp" />
+            <LinearLayout
+                android:id="@+id/infoButton1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/findPathLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
+                <android.widget.Button
+                    android:id="@+id/callNumber"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/map_aed_button"
+                    android:drawableStart="@drawable/map_bookmark_off"
+                    android:paddingLeft="12dp" />
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="길찾기"
-                android:textSize="10sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="즐겨찾기"
+                    android:textSize="10sp" />
 
-        </LinearLayout>
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/findPathLayout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/infoButton1"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <android.widget.Button
+                    android:id="@+id/findPathButton"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/map_aed_button"
+                    android:drawableLeft="@drawable/map_find_way"
+                    android:paddingLeft="12dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="길찾기"
+                    android:textSize="10sp" />
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
