--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -52,67 +52,43 @@
 
             <ImageButton
                 android:id="@+id/ib_how_to_aed"
-                android:layout_width="0dp"
+                android:layout_width="173dp"
                 android:layout_height="220dp"
-                android:background="@drawable/info_btn_howtoaed"
+                android:background="@drawable/info_ib_howtoaed"
                 android:contentDescription="@string/how_to_aed"
-                android:elevation="24dp"
-                android:paddingStart="13dp"
-                android:paddingTop="5dp"
-                android:paddingEnd="5dp"
-                app:layout_constraintDimensionRatio="0.74"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/ib_how_to_cpr"
-                app:layout_constraintTop_toBottomOf="@id/spacebelowmessage"
-                app:layout_constraintHorizontal_weight="6" />
+                app:layout_constraintTop_toBottomOf="@id/spacebelowmessage" />
 
             <ImageButton
                 android:id="@+id/ib_how_to_cpr"
-                android:layout_width="0dp"
+                android:layout_width="173dp"
                 android:layout_height="220dp"
-                android:background="@drawable/info_btn_howtocpr"
+                android:background="@drawable/info_ib_howtocpr"
                 android:contentDescription="@string/how_to_cpr"
-                android:elevation="24dp"
-                android:paddingStart="10dp"
-                android:paddingTop="5dp"
-                android:paddingEnd="5dp"
-                app:layout_constraintDimensionRatio="0.74"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/ib_how_to_aed"
-                app:layout_constraintTop_toBottomOf="@id/spacebelowmessage"
-                app:layout_constraintHorizontal_weight="6"/>
+                app:layout_constraintTop_toBottomOf="@id/spacebelowmessage" />
 
             <ImageButton
                 android:id="@+id/ib_how_to_disaster"
-                android:layout_width="0dp"
+                android:layout_width="173dp"
                 android:layout_height="220dp"
-                android:background="@drawable/info_btn_howtodisaster"
+                android:background="@drawable/info_ib_disaster"
                 android:contentDescription="@string/how_to_disaster"
-                android:elevation="24dp"
-                android:paddingStart="13dp"
-                android:paddingTop="12dp"
-                android:paddingEnd="5dp"
-                app:layout_constraintDimensionRatio="0.74"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/ib_how_to_checklist"
-                app:layout_constraintTop_toBottomOf="@id/ib_how_to_aed"
-                app:layout_constraintHorizontal_weight="6"/>
+                app:layout_constraintTop_toBottomOf="@id/ib_how_to_aed" />
 
             <ImageButton
                 android:id="@+id/ib_how_to_checklist"
-                android:layout_width="0dp"
+                android:layout_width="173dp"
                 android:layout_height="220dp"
-                android:background="@drawable/info_btn_howtochecklist"
+                android:background="@drawable/info_ib_checklist"
                 android:contentDescription="@string/how_to_cpr"
-                android:elevation="24dp"
-                android:paddingStart="10dp"
-                android:paddingTop="12dp"
-                android:paddingEnd="5dp"
-                app:layout_constraintDimensionRatio="0.74"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/ib_how_to_disaster"
-                app:layout_constraintTop_toBottomOf="@id/ib_how_to_cpr"
-                app:layout_constraintHorizontal_weight="6"/>
+                app:layout_constraintTop_toBottomOf="@id/ib_how_to_cpr" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
