--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -100,4 +100,14 @@
         <item name="android:letterSpacing">-0.02</item>
         <item name="lineHeight">12sp</item>
     </style>
+
+    <style name="TextButton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="font">@font/spoqa_han_sans_neo_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="lineHeight">19sp</item>
+        <item name="android:gravity">top</item>
+    </style>
+    <style name="ActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge"/>
 </resources>
