- setting layout - edited top toolbar

--- a/app/src/main/res/layout/ambulance_list.xml
+++ b/app/src/main/res/layout/ambulance_list.xml
@@ -46,6 +46,7 @@
         android:src="@drawable/sos_btn_tel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/sos_amb_tel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
