--- a/app/src/main/res/layout/fragment_common_dialog.xml
+++ b/app/src/main/res/layout/fragment_common_dialog.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sos_dialog"
     android:layout_width="match_parent"
-    android:layout_height="182dp"
-    app:cardCornerRadius="10dp">
+    android:layout_height="182dp">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -53,7 +51,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="42dp"
-                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
                 android:background="@drawable/sos_btn_pop_confirm"
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/confirm"
