--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -53,7 +53,7 @@
                 android:layout_height="19dp"
                 android:layout_marginTop="28dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                android:text="@string/txt_select_num"
+                android:text="@string/sos_txt_select_num"
                 android:textColor="@color/gray600"
                 android:textFontWeight="900"
                 android:textSize="16sp"
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:background="@drawable/sos_btn_119_custom"
-                android:contentDescription="@string/btn_119"
+                android:contentDescription="@string/sos_btn_119"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_select_num"
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/sos_btn_112_custom"
-                android:contentDescription="@string/btn_112"
+                android:contentDescription="@string/sos_btn_112"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_119"
@@ -91,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/sos_btn_fav_custom"
-                android:contentDescription="@string/btn_fav"
+                android:contentDescription="@string/sos_btn_fav"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_112"
@@ -104,7 +104,7 @@
                 android:layout_marginTop="35dp"
                 android:drawablePadding="5dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                android:text="@string/txt_sms"
+                android:text="@string/sos_txt_sms"
                 android:textColor="@color/gray400"
                 android:textFontWeight="400"
                 android:textSize="13sp"
@@ -119,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="17dp"
-                android:contentDescription="@string/img_sms"
+                android:contentDescription="@string/sos_img_sms"
                 android:background="@drawable/sos_img_sms_ex"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +133,7 @@
                 android:layout_marginTop="35dp"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                android:gravity="left"
+                android:gravity="start"
                 android:textColor="#1B6DB1"
                 android:textFontWeight="400"
                 android:textSize="14sp"
@@ -146,7 +146,7 @@
                 android:layout_height="17dp"
                 android:layout_marginTop="29dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                android:text="@string/txt_amb"
+                android:text="@string/sos_txt_amb"
                 android:textColor="@color/gray400"
                 android:textFontWeight="400"
                 android:textSize="14sp"
@@ -161,7 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
                 android:background="@drawable/sos_btn_amb_num"
-                android:contentDescription="@string/btn_amb"
+                android:contentDescription="@string/sos_btn_amb"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_amb"
