--- a/app/src/main/res/layout/fragment_sos_amb.xml
+++ b/app/src/main/res/layout/fragment_sos_amb.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/black"
         android:fontFamily="@font/spoqa_han_sans_neo_regular"
         android:textSize="16sp"
-        android:drawableRight="@drawable/sos_btn_loc"
+        android:drawableEnd="@drawable/sos_btn_loc"
         android:drawablePadding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -51,7 +51,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="29dp"
         android:layout_marginTop="24dp"
-        android:text="'인타임'은 정보 중개자로 업체 전화 후 관련된 문제에 대한 의무와 책임은 각 업체에 있으며, 민간 구급차를 이용하면 금액이 부과됩니다. 이용 시 부과되는 이용료는 담당 업체마다 상이합니다."
+        android:text="@string/sos_amb_notice"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
