--- a/app/src/main/res/drawable/setting_bg.xml
+++ b/app/src/main/res/drawable/setting_bg.xml
@@ -2,10 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:left="-2dp"
-        android:right="-2dp"
-        android:top="-2dp">
+        android:right="-2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="#4DEDEDED" />
             <stroke
                 android:width="1dp"
                 android:color="@color/gray100" />
