--- a/app/src/main/res/drawable/setting_fav_btn_press.xml
+++ b/app/src/main/res/drawable/setting_fav_btn_press.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:left="-2dp"
-        android:right="-2dp"
-        android:top="-2dp">
+        android:left="-4dp"
+        android:right="-4dp"
+        android:top="-4dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
             <stroke
-                android:width="1dp"
-                android:color="@color/gray100" />
+                android:width="3dp"
+                android:color="@color/red" />
         </shape>
     </item>
 </layer-list>
