--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -101,7 +101,7 @@
         <item name="lineHeight">12sp</item>
     </style>
 
-    <style name="TextButton" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="TextButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="font">@font/spoqa_han_sans_neo_regular</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
@@ -109,5 +109,4 @@
         <item name="lineHeight">19sp</item>
         <item name="android:gravity">top</item>
     </style>
-    <style name="ActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge"/>
 </resources>
