--- a/app/src/main/res/drawable/setting_bg_con_seleted.xml
+++ b/app/src/main/res/drawable/setting_bg_con_seleted.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
+    <stroke android:color="@color/red"
+        android:width="1dp" />
     <corners android:radius="10dp" />
 </shape>
