--- a/app/src/main/res/layout/fragment_disaster.xml
+++ b/app/src/main/res/layout/fragment_disaster.xml
@@ -1,14 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.FragmentDisaster">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/iv_bar_design"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/info_iv_bar_design" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/iv_bar_design"
+            android:paddingLeft="@dimen/default_padding"
+            android:paddingRight="@dimen/default_padding">
+
+            <Button
+                android:id="@+id/info_tb_earthquake"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:gravity="left|center_vertical"
+                android:backgroundTint="@color/white"
+                android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                android:letterSpacing="-0.01"
+                android:padding="0dp"
+                android:text="@string/info_tb_earthquake"
+                android:textColor="@drawable/info_btn_textcolor"
+                android:textSize="32sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+            <Button
+                android:id="@+id/info_tb_typhoon"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:gravity="left|center_vertical"
+                android:backgroundTint="@color/white"
+                android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                android:letterSpacing="-0.01"
+                android:padding="0dp"
+                android:text="@string/info_tb_typhoon"
+                android:textColor="@drawable/info_btn_textcolor"
+                android:textSize="32sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+            <Button
+                android:id="@+id/info_tb_flood"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:gravity="left|center_vertical"
+                android:backgroundTint="@color/white"
+                android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                android:letterSpacing="-0.01"
+                android:padding="0dp"
+                android:text="@string/info_tb_flood"
+                android:textColor="@drawable/info_btn_textcolor"
+                android:textSize="32sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+            <Button
+                android:id="@+id/info_tb_forrestfire"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:gravity="left|center_vertical"
+                android:backgroundTint="@color/white"
+                android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                android:letterSpacing="-0.01"
+                android:padding="0dp"
+                android:text="@string/info_tb_forrestfire"
+                android:textColor="@drawable/info_btn_textcolor"
+                android:textSize="32sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+            <Button
+                android:id="@+id/info_tb_fire"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:gravity="left|center_vertical"
+                android:backgroundTint="@color/white"
+                android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                android:letterSpacing="-0.01"
+                android:padding="0dp"
+                android:text="@string/info_tb_fire"
+                android:textColor="@drawable/info_btn_textcolor"
+                android:textSize="32sp" />
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
