--- a/app/src/main/res/layout/activity_setting_contact.xml
+++ b/app/src/main/res/layout/activity_setting_contact.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4DEDEDED"
-    tools:context=".setting.SettingContactActivity">
+    tools:context=".setting.SettingContactsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/setting_con_title"
@@ -43,10 +43,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/setting_con_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
+        android:overScrollMode="never"
+        android:scrollbars="none"
         app:layout_constraintTop_toBottomOf="@id/setting_con_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
