--- a/app/src/main/res/layout/contact_list.xml
+++ b/app/src/main/res/layout/contact_list.xml
@@ -46,12 +46,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginStart="166dp"
+        android:layout_marginEnd="24dp"
         android:text="대표연락처"
         android:textAppearance="@style/Body1"
         android:textColor="@color/gray300"
         android:visibility="gone"
-        app:layout_constraintStart_toEndOf="@id/con_name"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/con_space"/>
 
     <TextView
