--- a/app/src/main/res/layout/fragment_common_dialog.xml
+++ b/app/src/main/res/layout/fragment_common_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sos_dialog"
     android:layout_width="match_parent"
-    android:layout_height="182dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:orientation="vertical"
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/pop_title"
-            android:layout_width="280dp"
+            android:layout_width="wrap_content"
             android:layout_height="22dp"
             android:layout_margin="24dp"
             android:textColor="@color/black"
@@ -23,7 +23,7 @@
         <TextView
             android:id="@+id/pop_ask"
             android:layout_width="280dp"
-            android:layout_height="22dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:textColor="@color/gray400"
             android:textSize="14sp"
