--- a/app/src/main/res/layout/activity_setting_add_contact.xml
+++ b/app/src/main/res/layout/activity_setting_add_contact.xml
@@ -43,6 +43,7 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="32dp"
         android:fillViewport="true"
         android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@id/setting_addcon_title"
@@ -53,7 +54,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/setting_addcon_scroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -178,6 +179,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="100dp"
+                    android:layout_marginBottom="32dp"
                     android:background="@drawable/setting_btn_add"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/setting_addcon_chk" />
