--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -109,6 +109,7 @@
         android:layout_height="wrap_content"
         android:text="@string/emptyAedResult"
         android:visibility="gone"
+        android:textColor="@color/gray400"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
