--- a/app/src/main/res/layout/item_shelter_detail_viewpager.xml
+++ b/app/src/main/res/layout/item_shelter_detail_viewpager.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/orgMarker"
+                android:id="@+id/shelterOrgMarker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
@@ -42,7 +42,7 @@
                 android:text="|" />
 
             <TextView
-                android:id="@+id/distanceMarker"
+                android:id="@+id/shelterDistanceMarker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="20m" />
@@ -50,7 +50,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/addressMarker"
+            android:id="@+id/shelterAddressMarker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
@@ -61,7 +61,7 @@
             tools:text="서울특별시 마포구 성산로 128" />
 
         <TextView
-            android:id="@+id/addressDetailMarker"
+            android:id="@+id/shelterCategoryMarker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
@@ -99,7 +99,7 @@
                 android:text="@string/bookmark" />
 
             <android.widget.Button
-                android:id="@+id/bookMarkButton"
+                android:id="@+id/shelterBookMarkButton"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginHorizontal="5dp"
@@ -129,7 +129,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <android.widget.Button
-                    android:id="@+id/callNumber"
+                    android:id="@+id/shelterCallNumber"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="@drawable/map_aed_button"
@@ -158,7 +158,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <android.widget.Button
-                    android:id="@+id/findPathButton"
+                    android:id="@+id/shelterFindPathButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="@drawable/map_aed_button"
