--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="ThemeOverlay.Intime.AppWidgetContainer" parent="">
+        <item name="appWidgetBackgroundColor">@color/widgetbg</item>
+        <item name="appWidgetTextColor">@color/black</item>
+    </style>
 </resources>
