--- a/app/src/main/res/drawable/setting_bg_con_custom.xml
+++ b/app/src/main/res/drawable/setting_bg_con_custom.xml
@@ -2,7 +2,132 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/setting_bg_con_seleted"
-        android:state_pressed="true" />
-    <item android:drawable="@drawable/setting_bg_con_list" />
-
+        android:state_pressed="true">
+        <layer-list>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#00CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#06CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#09CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#0BCCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#0DCCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#10CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#12CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#15CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#17CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#1ACCCCCC" />
+                </shape>
+            </item>
+        </layer-list>
+    </item>
+    <item android:drawable="@drawable/setting_bg_con_list">
+        <layer-list>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#00CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#06CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#09CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#0BCCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#0DCCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#10CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#12CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#15CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#17CCCCCC" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" />
+                    <solid android:color="#1ACCCCCC" />
+                </shape>
+            </item>
+        </layer-list>
+    </item>
 </selector>
