--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:id="@+id/toolbar_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
             android:text="@string/app_name"
             android:textAppearance="@style/Head3"
             app:layout_constraintStart_toStartOf="parent"/>
