--- a/app/src/main/res/layout/activity_setting_add_contact.xml
+++ b/app/src/main/res/layout/activity_setting_add_contact.xml
@@ -110,6 +110,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:hint="비상연락처"
+                    android:inputType="text"
                     android:textColorHint="@color/gray300"
                     android:textAppearance="@style/Head4"
                     android:textColor="@color/black"
@@ -134,6 +135,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:hint="전화번호를 입력해주세요"
+                    android:inputType="phone"
                     android:textColorHint="@color/gray300"
                     android:textAppearance="@style/Head4"
                     android:textColor="@color/black"
@@ -181,6 +183,7 @@
                     android:layout_marginTop="100dp"
                     android:layout_marginBottom="32dp"
                     android:background="@drawable/setting_btn_add"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/setting_addcon_chk" />
 
