--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -128,17 +128,16 @@
 
             <TextView
                 android:id="@+id/txt_sms"
-                android:layout_width="255dp"
+                android:layout_width="225dp"
                 android:layout_height="71dp"
-                android:layout_marginTop="35dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:gravity="start"
                 android:textColor="#1B6DB1"
-                android:textFontWeight="400"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_sms_start" />
+                app:layout_constraintStart_toStartOf="@id/img_sms_guide"
+                app:layout_constraintTop_toTopOf="@id/img_sms_guide"
+                app:layout_constraintBottom_toBottomOf="@id/img_sms_guide"/>
 
             <TextView
                 android:id="@+id/txt_amb"
